# barq-native

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  NOTICE  README.md  conanfile.py
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/semantic_search/: CMakeLists.txt  README.md  main.cpp
examples/task_manager/: CMakeLists.txt  README.md  main.cpp
examples/vector_search/: CMakeLists.txt  README.md  deep1b_sample.json  main.cpp
include/barq_native/: accessors.hpp  client_reset.hpp  db.hpp  flex_sync.hpp  link.hpp  logger.hpp  macros.hpp  managed_binary.hpp  managed_decimal.hpp  managed_dictionary.hpp  managed_indexed.hpp  managed_list.hpp  managed_mixed.hpp  managed_numeric.hpp  managed_objectid.hpp  managed_primary_key.hpp  managed_set.hpp  managed_string.hpp  managed_timestamp.hpp  managed_uuid.hpp  managed_vector.hpp  notifications.hpp  observation.hpp  rbool.hpp  results.hpp  scheduler.hpp  schema.hpp  sdk.hpp  sync.hpp  thread_safe_reference.hpp  types.hpp  vector.hpp
include/barq_native/internal/: type_info.hpp
include/barq_native/internal/bridge/: async_open_task.hpp  barq.hpp  binary.hpp  col_key.hpp  decimal128.hpp  dictionary.hpp  list.hpp  lnklst.hpp  mixed.hpp  obj.hpp  obj_key.hpp  object.hpp  object_id.hpp  object_schema.hpp  property.hpp  query.hpp  results.hpp  schema.hpp  set.hpp  status.hpp  sync_error.hpp  sync_manager.hpp  sync_session.hpp  table.hpp  thread_safe_reference.hpp  timestamp.hpp  utils.hpp  uuid.hpp  vector_index.hpp
include/barq_native/internal/networking/: shims.hpp  utils.hpp
include/barq_native/internal/scheduler/: barq_core_scheduler.hpp
include/barq_native/networking/: http.hpp  websocket.hpp
include/barq_native/schedulers/: default_scheduler.hpp
ports/: portfile.cmake  usage  vcpkg.json
src/: CMakeLists.txt
src/barq_native/: client_reset.cpp  db.cpp  flex_sync.cpp  logger.cpp  managed_binary.cpp  managed_decimal.cpp  managed_numeric.cpp  managed_objectid.cpp  managed_primary_key.cpp  managed_string.cpp  managed_timestamp.cpp  managed_uuid.cpp  sdk.cpp  sync.cpp  types.cpp
src/barq_native/internal/: version_numbers.hpp.in
src/barq_native/internal/bridge/: async_open_task.cpp  barq.cpp  binary.cpp  bridge_types.hpp.in  col_key.cpp  decimal128.cpp  dictionary.cpp  list.cpp  lnklst.cpp  mixed.cpp  obj.cpp  obj_key.cpp  object.cpp  object_id.cpp  object_schema.cpp  property.cpp  query.cpp  results.cpp  schema.cpp  set.cpp  status.cpp  sync_error.cpp  sync_manager.cpp  sync_session.cpp  table.cpp  thread_safe_reference.cpp  timestamp.cpp  uuid.cpp
src/barq_native/internal/bridge/generator/: CMakeLists.txt  bridge_type_info_generator.cpp.in  bridge_type_info_parser.cmake
src/barq_native/internal/networking/: network_transport.cpp  shims.cpp  utils.cpp
src/barq_native/internal/scheduler/: barq_core_scheduler.cpp
src/barq_native/networking/: http.cpp  websocket.cpp
src/barq_native/schedulers/: default_scheduler.cpp
src/barq_native/util/: config.h.in
tests/: CMakeLists.txt  conanfile.py  main.cpp  main.hpp  vcpkg.json
tests/aosp/: Android.bp  README.md  main.cpp
tests/db/: barq_tests.cpp  binary_tests.cpp  date_tests.cpp  decimal_tests.cpp  embedded_object_tests.cpp  float_tests.cpp  frozen_tests.cpp  index_tests.cpp  link_stream_tests.cpp  list_tests.cpp  map_tests.cpp  mixed_tests.cpp  numeric_tests.cpp  object_id_tests.cpp  object_tests.cpp  optional_tests.cpp  performance_tests.cpp  query_tests.cpp  results_tests.cpp  scheduler_tests.cpp  set_tests.cpp  string_tests.cpp  sync_tests.cpp  test_objects.hpp  uuid_tests.cpp  vector_tests.cpp  write_tests.cpp
tools/: generate-version-numbers-for-soong.sh
tools/cmake/: Config.cmake.in  GetVersion.cmake
